# HATLib

./: .gitignore  CMakeLists.txt  README.md
HATEdit/: CMakeLists.txt
HATEdit/src/: main.cpp
HATEncoder/: CMakeLists.txt
HATEncoder/src/: main.cpp
HATLib/: CMakeLists.txt
HATLib/include/: HATDecode.h  HATEncode.h  HATFormat.h  arithmetic.h
HATLib/src/: HATDecode.cpp  HATEncode.cpp  HATFormat.cpp
HATPlayer/: CMakeLists.txt
HATPlayer/src/: main.cpp
include/: HATDecode.h  HATEncode.h  HATFormat.h
src/: HATDecode.cpp  HATEncode.cpp
